# faemiyah-demoscene_2010-08_gamedev_orbital_bombardment

./: .gitignore  CMakeLists.txt  COPYING  README  README.md  SConstruct  TODO.txt  io_export_naju_mesh.py  orbital_bombardment.conf  orbital_bombardment.sln  orbital_bombardment.vcxproj  orbital_bombardment.vcxproj.filters
fnt/: default.xml
mdl/: bullet_flak.blend  bullet_railgun.blend  flak_export.blend  missile_anti.blend  missile_anti.mesh  missile_anti_export.blend  missile_icbm.blend  missile_icbm.mesh  siegecruiser-0.mesh  siegecruiser-1.mesh  siegecruiser-2.mesh  siegecruiser-3.mesh  siegecruiser-4.mesh  siegecruiser.blend  siegecruiser.mesh  siegecruiser_0.mesh  siegecruiser_1.mesh  siegecruiser_2.mesh  siegecruiser_3.mesh  siegecruiser_4.mesh  siegecruiser_5.mesh  siegecruiser_6.mesh  siegecruiser_alternate.blend  siegecruiser_export.blend  silo.mesh  skybox_back.mesh  skybox_bottom.mesh  skybox_front.mesh  skybox_left.mesh  skybox_right.mesh  skybox_top.mesh
notinuse/: script.7z  snd.7z
shader/: 2d.xml  2d_font.xml  2d_texture.xml  3d_overlay.xml  3d_overlay_line.xml  3d_point_sprite.xml  3d_static.xml  ob_atmosphere.xml  ob_distort.xml  ob_sun.xml  ob_world.xml  ob_world_schematic.xml
snd/: ob_alarm.sample  ob_alarm_over.sample  ob_contact.sample  ob_flak_short.sample  ob_illegal_action.sample  ob_impact_in.sample  ob_locked.sample  ob_nuke.sample  ob_nuke_explosion.sample  ob_railgun.sample  ob_railgun_lock_long.sample  ob_route_change.sample  ob_route_change_accepted.sample  ob_target_destroyed.sample
src/: CMakeLists.txt  defaults.hpp  ob_city.cpp  (+82 more)
(+144 files in other folders)
